# flante-lite-mes

./: .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260717_0001_identity_foundation.py  20260718_0002_add_excel_import_center_tables.py  20260718_0003_harden_phase_2_import_review_flows.py  20260718_0004_enforce_import_lifecycle.py  20260718_0005_add_replenishment_demand_pool.py  20260722_0006_harden_replenishment_review.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  health.py  imports.py  production_demands.py  replenishment.py  users.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  request_id.py  security.py
backend/app/models/: __init__.py  identity.py  imports.py  replenishment.py
backend/app/schemas/: auth.py  common.py  imports.py  replenishment.py
backend/app/scripts/: __init__.py  init_db.py
backend/app/services/: audit.py  excel_import.py  identity.py  replenishment.py
backend/scripts/: benchmark_large_import.py  benchmark_replenishment.py
backend/tests/: conftest.py  test_admin_protection.py  test_auth.py  test_config.py  test_excel_imports.py  test_health.py  test_replenishment.py  test_request_id.py
docs/: phase-0-development-plan.md  phase-0-excel-analysis.md  phase-0-system-design.md  phase-1-foundation-report.md  phase-2-excel-import-report.md  phase-2-large-import-benchmark.md  phase-3-replenishment-benchmark.md  (+8 more)
(+31 files in other folders)
