[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "flante-lite-mes-backend"
version = "0.1.0"
description = "福兰特轻量生产计划执行系统后端"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "openpyxl>=3.1,<4",
  "pydantic-settings>=2.7,<3",
  "pwdlib[argon2]>=0.2,<1",
  "PyJWT>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
